--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
                         AI-Driven Analytics Platform
                     </h1>
                     <div class="hero__inner">
-                        <div class="hero__item">
+                        <div class="hero__item hero__item--delay1">
                             <div class="hero__item-top">
                                 <img src="./images/item01.png" alt="">
                                 <h2 class="hero__item-title">
@@ -58,7 +58,7 @@
                             </div>
                             
                         </div>
-                        <div class="hero__item">
+                        <div class="hero__item hero__item--delay2">
                             <div class="hero__item-top">
                                 <img src="./images/item02.png" alt="">
                                 <h2 class="hero__item-title">
@@ -69,7 +69,7 @@
                                 Мы помогаем клиентам подобрать необходимые источники данных (через Pop UP нужно показать логотипы: Все ОФД, Nielsen, Едадил, СкидкиОнлайн). Валидируем и верифицируем их. Приводим их к единому формату и классификатору. 
                             </div>
                         </div>
-                        <div class="hero__item">
+                        <div class="hero__item hero__item--delay3">
                             <div class="hero__item-top">
                                 <img src="./images/item03.png" alt="">
                                 <h2 class="hero__item-title">
@@ -80,7 +80,7 @@
                                 Мы помогаем клиентам подобрать необходимые источники данных (через Pop UP нужно показать логотипы: Все ОФД, Nielsen, Едадил, СкидкиОнлайн). Валидируем и верифицируем их. Приводим их к единому формату и классификатору. 
                             </div>
                         </div>
-                        <div class="hero__item">
+                        <div class="hero__item hero__item--delay4">
                             <div class="hero__item-top">                           
                                 <img src="./images/item04.png" alt="">
                                 <h2 class="hero__item-title">
@@ -244,7 +244,7 @@
                     <div class="swiper-slide">
                         <div class="slider__handling">
                             <div class="slider__name">
-                                <span class="slider__name-number">1</span>
+                                <span class="slider__name-number">3</span>
                                 <h3 class="slider__name-title">Обработка данных</h3>
                             </div>
                             <div class="slider__item">
@@ -350,6 +350,7 @@
         </div>
     </section>
 
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/main.js"></script>
